<resources>
    <string name="app_name">Create Vision app</string>
    <string name="create_vision">CREATE VISION</string>
    <string name="mvv">mvv</string>
    <string name="jogos">Jogos</string>
    <string name="sobre_n_s">Sobre nós</string>
    <string name="contato">Contato</string>
    <string name="todo">TODO</string>
    <string name="createvisiongames">createvisiongames</string>
    <string name="voltar">Voltar</string>
    <string name="miss_o_vis_o_e_valores_da_cv">Missão, visão e valores da CV</string>
    <string name="miss_o">Missão</string>
    <string name="levar_inspira_o_e_inova_o_para_os_gamers_de_todo_o_mundo">Levar inspiração e inovação para os gamers de todo o mundo.</string>
    <string name="vis_o">Visão</string>
    <string name="prover_jogos_de_qualidade_e_com_ensinamentos_para_seus_jogadores_visando_o_bem_estar_social_e_a_divers_o_dos_usu_rios">Prover jogos de qualidade e com ensinamentos para seus jogadores, visando o bem-estar social e a diversão dos usuários.</string>
    <string name="honestidade_respeito_e_comprometimento">Honestidade, respeito e comprometimento.</string>
    <string name="valores">Valores</string>
    <string name="voltar2">voltar</string>
    <string name="sobre_n_s_">Sobre nós</string>
    <string name="raphael_lourencini">Raphael Lourencini</string>
    <string name="quot_il_ballo_della_vita_quot">\"Il ballo della vita\"</string>
    <string name="todoo">TODO</string>
    <string name="todos">TODO</string>
    <string name="game_designer">Game Designer</string>
    <string name="programador">Programador</string>
    <string name="quot_o_m_nimo_do_m_nimo_dar_o_seu_m_ximo_quot">\"O mínimo do mínimo é dar o seu máximo\"</string>
    <string name="matheus_anthony">Matheus Anthony</string>
    <string name="didico_and_the_magic_hat">Didico and The Magic Hat</string>
    <string name="num_ambiente_interativo_o_jogador_tem_a_miss_o_de_defender_os_npcs_indefesos_dos_malfeitores_que_praticam_bullying_para_isso_ele_enfrentar_diversas_aventuras_uma_mais_dif_cil_que_a_outra_para_poder_instaurar_a_paz_e_o_respeito_na_sociedade">Num ambiente interativo, o jogador tem a missão de defender os NPCs indefesos dos malfeitores que praticam bullying. Para isso, ele enfrentará diversas aventuras, uma mais difícil que a outra, para poder instaurar a paz e o respeito na sociedade.</string>
    <string name="voltar3">Voltar</string>
    <string name="todo3">TODO</string>
    <string name="voltar4">Voltar</string>
    <string name="email">Email</string>
    <string name="contate_nos">CONTATE-NOS</string>
    <string name="mensagem">Mensagem</string>
    <string name="contate_nos_">Contate-nos</string>
    <string name="nome">Nome</string>
    <string name="todo4">TODO</string>
    <string name="line1">___________________________________</string>
    <string name="line2">___________________________________</string>
    <string name="line3">____________________</string>
</resources>